<resources>
    <string name="app_name">漫画</string>
    <string name="limit_benifit">限时特惠</string>
    <string name="ad_openVIP">开通终极帝王级服务VIP低至999亿美元/月</string>
    <string name="openVIP">黑喂狗</string>
    <string name="privatefm">PrivateFM</string>
    <string name="days">Hits</string>
    <string name="mix">Mix</string>
    <string name="charts">Charts</string>
    <string name="lasted_position">上次看到</string>
</resources>
