<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_main_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/topview_back_for"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="29dp"
        android:scaleType="centerCrop"
        android:src="#00000000" />

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginBottom="29dp"-->
    <!--android:background="#36ffffff" />-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <ImageView
            android:id="@+id/topview_back"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:scaleType="fitXY"
            android:src="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/top_userImg"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/backs" />

                <TextView
                    android:id="@+id/top_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/top_userImg"
                    android:text="二刺螈游客,你好嗷!"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/top_OpenVIP"
                    android:layout_width="70dp"
                    android:layout_height="23dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/btn_openvip"
                    android:text="Hi"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#50cacaca" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/parent_A"
                    android:layout_width="40dp"
                    android:layout_height="13dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/limit_benefit"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="@string/limit_benifit"
                    android:textColor="#ffffff"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/parent_A"
                    android:text="@string/ad_openVIP"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toStartOf="@+id/AD_heiweigou"
                    android:gravity="center"
                    android:text="@string/openVIP"
                    android:textColor="#ffffff"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <View
                    android:id="@+id/AD_heiweigou"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_chevron_right_black_24dp" />

            </RelativeLayout>
        </LinearLayout>
        <!--
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000">



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#2bffffff" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="45dp"
                                    android:layout_height="45dp"
                                    android:layout_marginLeft="20dp"
                                    android:src="@color/colorPrimary" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20dp"
                                    android:text="用户" />
                            </LinearLayout>

                            <Button
                                android:layout_width="80dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center_vertical"
                                android:layout_marginEnd="11dp"
                                android:background="@drawable/btn_openvip"
                                android:text="开通会员"
                                android:textColor="@android:color/white" />
                        </FrameLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="#76ffffff" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="20dp"
                                android:text="开通黑胶VIP低至9元、月"
                                android:textColor="#e5ffffff" />

                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>
            -->
    </android.support.v7.widget.CardView>
</FrameLayout>
